--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,7 +7,6 @@
     <title>@ViewData["Title"] - YTDownloader</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/YTDownloader.styles.css" asp-append-version="true" />
 </head>
 
 <body>
@@ -15,11 +14,11 @@
         
     </header>
 
-    <main class="container">
+    <main class="container mb-5">
         @RenderBody()
     </main>
 
-    <footer class="border-top footer fixed-bottom p-3 text-muted">
+    <footer class="border-top footer bg-light fixed-bottom p-3 text-muted">
         <div class="container">
             &copy; 2024 - YTDownloader
         </div>
