--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <form id="search-form" method="post" class="mt-5" asp-action="Download" asp-controller="Home">
         <div class="input-group">
             <input type="text" class="form-control py-3" name="query" required 
-                placeholder="Insert the video URL or the name">
+                placeholder="Search results or paste the link to direct download">
             <button type="submit" class="btn btn-lg btn-primary">Search</button>
         </div>
     </form>
