--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
         
     </header>
 
-    <main class="container mb-5">
+    <main class="container" style="margin-bottom: 4rem;">
         @RenderBody()
     </main>
 
