--- a/Views/Shared/_SearchResults.cshtml
+++ b/Views/Shared/_SearchResults.cshtml
@@ -5,10 +5,12 @@
     @foreach(var result in Model)
     {
         string embedLink = result.Url.Replace("/watch?v=", "/embed/");
-        <div class="col-12 col-md-6 col-xl-4 mb-3">
-            <iframe src="@embedLink" frameborder="0" width="420px" height="240px"></iframe>
-            <p class="small text-truncate mb-0">@result.Title</p>
-            <p class="small text-primary">@result.Url</p>
+        <div class="col-12 col-md-6 col-xl-4 mb-4">
+            <iframe src="@embedLink" frameborder="0" width="420px" height="230px"></iframe>
+            <div class="d-flex align-items-center justify-content-between">
+                <p class="small text-truncate mb-0">@result.Title</p>
+                <a class="btn btn-sm btn-secondary" href="@Url.Action("Download", "Home", new { Url = result.Url })">download</a>
+            </div>
         </div>
     }
 }
